# sosage

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/: README.md
android/app/jni/: Application.mk  CMakeLists.txt
android/app/jni/src/: Android.mk
android/app/jni/yaml/: Android.mk
android/app/src/main/java/net/ptilouk/superflu/: Superflu.java
android/app/src/main/res/values/: strings.xml
appimage/: create_appimage.sh
cmake/: FindSDL_gfx.cmake  FindYAML.cmake  Sosage_utils.cmake  Sosage_version.cmake  Toolchain-mingw32.cmake
cmake/android/: app_build.gradle.in  app_jni_Android.mk.in  app_jni_LZ4_Android.mk.in  app_jni_SDL_mixer_ext_Android.mk.in  app_jni_src_Android.mk.in  app_jni_yaml_Android.mk.in  app_src_main_AndroidManifest.xml.in  app_src_main_java_net_main.java.in  app_src_main_res_values_strings.xml.in  settings.gradle.in
data/data/: init.yaml
data/data/rooms/: bureau.yaml
emscripten/: CMakeLists.txt
example/: example.lua  example.whatever  example.xml
include/Sosage/: Config.h  Content.h  Engine.h  platform.h  third_party_config.h  version.h
include/Sosage/Component/: Action.h  Animation.h  Base.h  Code.h  Condition.h  Conditional.h  Console.h  Cropped.h  Cutscene.h  Debug.h  Dialog.h  Event.h  Font.h  GUI_animation.h  Ground_map.h  Group.h  Handle.h  Handle_set.h  Hints.h  Image.h  Inventory.h  Locale.h  Menu.h  Music.h  Path.h  Position.h  Signal.h  Simple.h  Sound.h  State.h  Status.h  Text.h  Variable.h  cast.h
include/Sosage/Config/: config.h  options.h  platform.h  version.h
include/Sosage/Core/: File_IO.h  Graphic.h  IO.h  Input.h  Sound.h  Time.h
include/Sosage/Models/: Graphic_core.h  Input_core.h  Sound_core.h
include/Sosage/System/: Animation.h  Base.h  Control.h  File_IO.h  Graphic.h  Handle.h  IO.h  Input.h  Interface.h  Logic.h  Menu.h  Sound.h  Test_input.h  Time.h
include/Sosage/Utils/: Asset_manager.h  Bitmap_2.h  Clock.h  Event.h  Gamepad_info.h  Resource_manager.h  asset_packager.h  binary_io.h  color.h  conversions.h  datetime.h  demangle.h  enum.h  error.h  file.h  gamepad_labels.h  geometry.h  graph.h  helpers.h  image_split.h  locale.h  profiling.h  random.h  thread.h  time.h  vector_2.h
platform/android/: README.md
platform/android/app/: build.gradle
platform/android/app/jni/: Application.mk  CMakeLists.txt
platform/android/app/jni/LZ4/: Android.mk
platform/android/app/jni/src/: Android.mk
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
platform/android/app/src/main/res/values/: strings.xml
platform/android/gamedata/: build.gradle
platform/appimage/: README.md  create_appimage.sh
platform/debian/: README.md  create_deb.sh
platform/debian/superflu-pnc/DEBIAN/: control
platform/debian/superflu-riteurnz/DEBIAN/: control
platform/emscripten/: CMakeLists.txt  README.md
share/applications/: superflu_pnc.desktop
share/superflu_pnc/data/characters/: sophie.yaml
src/: main.cpp
src/Sosage/: Content.cpp  Engine.cpp  SCAP.cpp  Sosage.cpp
src/Sosage/Component/: Action.cpp  Animation.cpp  Base.cpp  Code.cpp  Condition.cpp  Conditional.cpp  Console.cpp  Cropped.cpp  Cutscene.cpp  Debug.cpp  Dialog.cpp  Font.cpp  GUI_animation.cpp  Ground_map.cpp  Group.cpp  Hints.cpp  Image.cpp  Inventory.cpp  Locale.cpp  Menu.cpp  Music.cpp  Path.cpp  Position.cpp  Signal.cpp  Sound.cpp  State.cpp  Status.cpp  Text.cpp  Variable.cpp
src/Sosage/System/: Animation.cpp  Base.cpp  Control.cpp  Control__gamepad.cpp  Control__mouse.cpp  File_IO.cpp  File_IO__read_room.cpp  Graphic.cpp  IO.cpp  Input.cpp  Interface.cpp  Interface__gamepad.cpp  Interface__labels.cpp  Interface__layout.cpp  Interface__menu.cpp  Interface__mouse.cpp  Logic.cpp  Logic__functions.cpp  Menu.cpp  Menu__creations.cpp  Sound.cpp  Test_input.cpp  Time.cpp
src/Sosage/Utils/: Asset_manager.cpp  Bitmap_2.cpp  Clock.cpp  Event.cpp  Gamepad_info.cpp  asset_packager.cpp  binary_io.cpp  color.cpp  conversions.cpp  datetime.cpp  error.cpp  gamepad_labels.cpp  geometry.cpp  image_split.cpp  locale.cpp  profiling.cpp
superflu/: bureau.xml  example.xml  init.xml  sophie.xml
superflu/resources/: bureau.xml  example.xml  example.yaml  init.yaml  sophie.xml
superflu/rooms/: example.xml
test/: check_data_validity.cpp  check_header.cpp  test.cpp  unit_Component_Ground_map.cpp  unit_component_action.cpp
tools/: build.py  build_all_platforms.py  check_data.py  clean_headers.py  compress_images.py  coordinates.py  fix_mac_lib_paths.py
