cmake_minimum_required(VERSION 3.6)

project(Superflu)

# armeabi-v7a requires cpufeatures library
# include(AndroidNdkModules)
# android_ndk_import_module_cpufeatures()

# SDL sources are in a subfolder named "SDL"
add_subdirectory(SDL)

# Compilation of companion libraries
add_subdirectory(SDL_image)
add_subdirectory(SDL_mixer)
add_subdirectory(SDL_ttf)

# Libyaml
add_subdirectory(yaml)

# My files
add_subdirectory(../../../../)
